[package]
name = "codemapper"
version = "0.1.0"
edition = "2021"
description = "Token-budgeted code outline/retrieval map: tree-sitter tags + reference graph + static-embedding semantic rerank."
license = "MIT"

[[bin]]
name = "codemapper"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# tree-sitter parsing
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"

# static embeddings (local model only, no network)
model2vec-rs = { version = "0.2", default-features = false, features = ["onig", "local-only"] }
